@@ -2,9 +2,11 @@ fusionforge (5.2~rc1-5+) UNRELEASED; urgency=low
 
   * Populate new user's shell accounts out of
     /var/lib/gforge/chroot/etc/skel (closes: #675054).
+  * Fix several missing files errors in gitweb for scmgit plugin (closes:
+    #674536).
   * 
 
- -- Olivier Berger <obergix@debian.org>  Wed, 18 Jul 2012 21:55:42 +0200
+ -- Olivier Berger <obergix@debian.org>  Thu, 19 Jul 2012 17:23:32 +0200
 
 fusionforge (5.2~rc1-5) unstable; urgency=low
 
